Issue number: 15691 - remove current issue type concept Modified Files: * src/i18n/ScarabBundle_en_US.properties - ToQuery: needed to double the   single quote or use double quote.  Don't know which is better so switched   to double quote. * src/java/org/tigris/scarab/om/AbstractScarabUser.java * src/java/org/tigris/scarab/om/ScarabUser.java * src/java/org/tigris/scarab/om/ScarabUserImpl.java - modified the three   user classes/interface   getSearchableRMITs: add a module which should not be shown in the   cross module list, also fixed method to not return deleted issue types   so it doesn't have to be checked in the template.   added getUnusedRModuleIssueTypes: returns the RModuleIssueTypes that   are not already in the current MITList. * src/java/org/tigris/scarab/pipeline/FreshenUserValve.java - replace   home,XModuleList.vm with IssueTypeList.vm * src/templates/macros/MITListMacro.vm - reordered statements a bit to   not show the filter html if there are no other modules/issue types to be   shown. use changes in ScarabUser api to only show issue types that have   not been added to the current mitlist * src/templates/screens/IssueTypeList.vm - replace home,XModuleList.vm with   IssueTypeList.vm

--- a/src/templates/macros/MITListMacro.vm
+++ b/src/templates/macros/MITListMacro.vm
@@ -74,7 +74,7 @@
 <a name="add"></a>
 
 #set ($currentModule = $scarabR.CurrentModule)
-#set ($currentRmits = $currentModule.RModuleIssueTypes)
+#set ($currentRmits = $user.getUnusedRModuleIssueTypes($currentModule))
 #set ($savedLists = $user.MITLists)
 #set ($isMoreThanOne = $currentRmits.size() > 1)
 #set ($atLeastOneRMIT = $currentRmits && !$currentRmits.isEmpty())
@@ -151,11 +151,21 @@ $l10n.CurrentModuleTypesIntro
 #set ($searchField = $data.Parameters.getString("searchField", ""))
 #set ($searchString = $data.Parameters.getString("searchString", ""))
 #set ($sortPolarity = $data.Parameters.getString("sortPolarity", "asc"))
-#set ($sortColumn = $data.Parameters.getString("sortColumn", ""))
-#if ($sortColumn.length() == 0)
-  #set ($putCurrentModuleFirst = true)
-  #set ($sortColumn = "module")
+#set ($sortColumn = $data.Parameters.getString("sortColumn", "module"))
+
+#set ($searchableRMITs = $user.getSearchableRMITs($searchField, $searchString, $sortColumn, $sortPolarity, $currentModule))
+#if ($searchableRMITs.isEmpty() && $searchField.length() != 0 && $searchString.length() != 0)
+ ## try one more time with no search criteria
+ #set ($searchableRMITs = $user.getSearchableRMITs("", "", $sortColumn, $sortPolarity, $currentModule))
+ #if (!$searchResults.isEmpty())
+   #set ($filterIgnored = true)
+ #end
 #end
+
+#if ($searchableRMITs.isEmpty())
+    <p><em>$l10n.NoMoreIssueTypes</em></p>
+#else
+
 
 ## FILTERING
 <div class="axial">
@@ -174,20 +184,9 @@ $l10n.CurrentModuleTypesIntro
 </table>
 </div>
 
-#set ($searchableRMITs = $user.getSearchableRMITs($searchField, $searchString, $sortColumn, $sortPolarity))
-#if ($searchableRMITs.isEmpty() && $searchField.length() != 0 && $searchString.length() != 0)
- ## try one more time with no search criteria
- #set ($searchableRMITs = $user.getSearchableRMITs("", "", $sortColumn, $sortPolarity))
- #if (!$searchResults.isEmpty())
+#if ($filterIgnored)
    <p class="infomark"><em>$l10n.FilterNoResults</em></p>
- #end
 #end
-
-#if ($searchableRMITs.isEmpty())
-<p><em>
-$l10n.NoMoreIssueTypes
-</em></p>
-#else
 
 ## PAGINATION
 ## if results exceed limit, get subset list
