Issue : A valid error message "Description must be less than 256 characters" should be displayed next to the description field when user enter more than 256 chars in "Description" field.
Modified file:
*src/templates/screens/SaveTemplate.vm -
 Call to the "fieldErrorMsg" macro to alert the user to enter less than 256 chars in "Description" field.

Issue : PCN21289
Committed by : Arun
Reviewed by : Dlr

--- a/src/templates/screens/SaveTemplate.vm
+++ b/src/templates/screens/SaveTemplate.vm
@@ -61,6 +61,7 @@
   <th>$l10n.Description</th>
   <td>
   #textAreaMedium("$templateGroup.Description.Key" $templateGroup.Description)
+  #fieldErrorMsg($templateGroup.Description '')
   </td>
 </tr>
 <tr>
