Issue : Whenever a 'filter' action produces no results, the alert message says "Filtering produced no results; showing all artifact types." regardless of whether the filtering  was based on module or issue types.
*src/i18n/ScarabBundle_en_US.properties -
Parameterised the "FilterNoResults" resource so that it can be used for both "module" and "issue type" based filtering.

src/templates/macros/MITListMacro.vm -
Pass the parameter, "module" or "issue type" depending upon the filter type to the L10N resource "FilterNoResults".

Issue : PCN20649
Committed by : arun@collab.net
Reviewed by : dlr@collab.net

--- a/src/templates/macros/MITListMacro.vm
+++ b/src/templates/macros/MITListMacro.vm
@@ -166,6 +166,11 @@ $l10n.CurrentModuleTypesIntro
     <p><em>$l10n.NoMoreIssueTypes</em></p>
 #else
 
+#if ($searchField.equals("module"))
+ #set ($searchValue = $l10n.Modules.toLowerCase())
+#else
+ #set ($searchValue = $l10n.IssueTypes.toLowerCase())
+#end
 
 ## FILTERING
 <div class="axial">
@@ -185,7 +190,7 @@ $l10n.CurrentModuleTypesIntro
 </div>
 
 #if ($filterIgnored)
-   <p class="infomark"><em>$l10n.FilterNoResults</em></p>
+   <p class="infomark"><em>$l10n.format("FilterNoResults", $searchValue)</em></p>
 #end
 
 ## PAGINATION
