--- a/src/templates/screens/IssueList.vm
+++ b/src/templates/screens/IssueList.vm
@@ -53,7 +53,7 @@ $page.Title
 <small>$l10n.format("IssueListCount", $totalCount)</small></h3>
 
 <div class="colbar">
-$format.getNow($scarabG.Constant.DATE_FORMAT)
+$format.getNow($scarabR.DateFormat)
 </div>
 
 <div class="colbar">
