--- a/src/templates/screens/AdvancedQuery.vm
+++ b/src/templates/screens/AdvancedQuery.vm
@@ -1,6 +1,6 @@
 <div class="app" id="advancedquery">
 #set ($user = $data.User)
-$user.setHomePage("query")
+$user.setHomePage('query')
 #set ($mitlist = $user.CurrentMITList)
 #if ($mitlist)
 <form action="$link.setPage("AdvancedQuery.vm")" method="post">
@@ -13,9 +13,9 @@ $user.setHomePage("query")
 #if ($mitlist.isSingleModuleIssueType())
 <div align="right"><a href="$link.setPage("Search.vm").addPathInfo("action", "Search").addPathInfo("eventSubmit_doSetquerytarget", "foo")">$l10n.CustomQuery</a></div>
 #end
-#advancedQueryFunctionBar("functnbar")
+#advancedQueryFunctionBar('functnbar')
 #advancedQuery(true)
-#advancedQueryFunctionBar("functnbar2")
+#advancedQueryFunctionBar('functnbar2')
 
 $intake.declareGroups()
 </form>
