Issue : Template with the attribute values set by registered user should be displayed when the project owner clicks the name of the template link from "Approve/reject user submitted items" page.
Also, to be consistent with handling unapproved queries, actions related to saving or editing the templates should be restricted
to the Approver.(Not covered in the original issue filed, but considered for fixing, since it is related.)

Changes:
*src/templates/screens/TemplateList.vm
 New parameter "cancelTemplate" is added to the url in order to set the corresponding "cancelTemplate" parameter value.

*src/templates/screens/admin/Approval.vm
 In order to display appropriate template information, changed the parameter as "templateId" instead of "id"
 and value passed as "$template.IssueId" instead of "$template.UniqueId". Also, New parameter "cancelTemplate" is added to the url.

*src/templates/screens/SaveTemplate.vm
 If the "cancelTemplate" parameter is null, set it to "TemplateList.vm". This parameter would be null when creating a new template.
 Suppress all action buttons except "cancel" button when the template is not yet
 approved and restrict the approver from editing/saving the template.

Issue : PCN20601
Committed by : arun@collab.net
Reviewed by : dlr@collab.net

--- a/src/templates/screens/SaveTemplate.vm
+++ b/src/templates/screens/SaveTemplate.vm
@@ -5,6 +5,11 @@
 #set ($templateInfo = $scarabR.IssueTemplateInfo)
 #set ($templateGroup = $intake.IssueTemplateInfo.mapTo($templateInfo))
 #set ($issueGroup = $intake.Issue.mapTo($currentTemplate))
+#set ($cancelTemplate = $data.Parameters.getString("$scarabG.Constant.CANCEL_TEMPLATE"))
+
+#if (!$cancelTemplate)
+ #set ($cancelTemplate = "TemplateList.vm")
+#end
 
 #if ($issueType)
 
@@ -12,7 +17,7 @@
 
 <form method="post" action="$link.setPage("SaveTemplate.vm").setAction("TemplateList")">
 <input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="TemplateList.vm" />
-<input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="TemplateList.vm" />
+<input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="$cancelTemplate" />
 <input type="hidden" name="$scarabG.Constant.CURRENT_ISSUE_TYPE" value="$issueType.QueryKey" />
 
 #if ($templateId && $templateInfo && !$templateInfo.canEdit($data.User))
@@ -24,10 +29,12 @@
   #end
 #macro (saveTemplateBar $id)
 <div class="functnbar$id">
-#if ($currentTemplate.IssueId)
+
+#set ($allowEditOrUse = ($currentTemplate.IssueId  && $templateInfo.Approved))
+#if ($allowEditOrUse)
   <input type="submit" value="$l10n.UseTemplate" name="eventSubmit_doUsetemplate" />&#160;
   <input type="submit" value="$l10n.Done" name="eventSubmit_doDone" />&#160; 
-#else
+#elseif (!$currentTemplate.IssueId)
   <input type="submit" value="$l10n.Save" name="eventSubmit_doCreatenew" />&#160;
 #end
 <input type="submit" value="$l10n.Cancel" name="eventSubmit_doCancel" />
@@ -84,7 +91,7 @@
 </table>
 </div>
 
-#if ($currentTemplate.IssueId)
+#if ($allowEditOrUse)
     <div class="functnbar3">
     <input type="submit" value="$l10n.Save" name="eventSubmit_doEdittemplateinfo" />&#160;
     </div>
@@ -134,7 +141,7 @@
   #end
 #end
 
-#if ($currentTemplate.IssueId)
+#if ($allowEditOrUse)
   <div class="functnbar3">
   <input type="submit" value="$l10n.Save" name="eventSubmit_doEditvalues" />&#160;
   </div>
