* src/i18n/ScarabBundle_en_US.properties   IssueLimitExceeded: New resource added to alert the user when more   than the configured number of artifacts is selected for an action.
* src/templates/macros/GlobalMacros.vm
  #processQueryResults(): One more argument (issue count) is added to
  the macro to conditionally display the "Xxx all" options.


* src/templates/screens/IssueList.vm
  #processQueryResults() is called regardless of the number of
  artifacts in the search result. Pass that number to the macro.


* src/conf/Scarab.properties
  scarab.issue.max.view, scarab.issue.max.assign,
  scarab.issue.max.move, scarab.issue.max.copy: New properties added
  to configure the max issues that can be viewed/assigned/copied/moved
  simultaneously.


* src/java/org/tigris/scarab/util/ScarabConstants.java
  ISSUE_MAX_VIEW, ISSUE_MAX_ASSIGN, ISSUE_MAX_MOVE, ISSUE_MAX_COPY:
  New constants added to hold the value of the properties mentioned
  above.


* src/java/org/tigris/scarab/actions/Search.java
  doPerform(): Condition added to alert the user when more than the
  configured number of artifacts is selected for an action.


Issue: PCN21658
Submitted by: Venkat
Reviewed by: Daniel Rall

--- a/src/templates/macros/GlobalMacros.vm
+++ b/src/templates/macros/GlobalMacros.vm
@@ -477,25 +477,33 @@ $scarabR.IssuePosInList of $scarabR.CurrentSearchResultsSize
  </p>
 #end
 
-#macro (processQueryResults $action)
+#macro (processQueryResults $action $listSize)
 <select name="next"
         onchange="javascript:submitFormTo(this.form, '$action');">
 <option value="" selected="selected">$l10n.ProcessResults:</option>
 #set ($module = $scarabR.CurrentModule)
 #if ($user.hasPermission($scarabG.Permission.ISSUE__VIEW, $module))
+  #if ($listSize <= $scarabG.Constant.ISSUE_MAX_VIEW)
     <option value="viewAll">$l10n.ViewAll</option>
+  #end
     <option value="viewSelected">$l10n.ViewSelected</option>
 #end
 #if ($user.hasPermission($scarabG.Permission.ISSUE__ASSIGN, $module))
+  #if ($listSize <= $scarabG.Constant.ISSUE_MAX_ASSIGN)
     <option value="assignAll">$l10n.AssignAll</option>
+  #end
     <option value="assignSelected">$l10n.AssignSelected</option>
 #end
 #if ($user.hasPermission($scarabG.Permission.ISSUE__ENTER, $module))
+  #if ($listSize <= $scarabG.Constant.ISSUE_MAX_COPY)
     <option value="copyAll">$l10n.CopyAll</option>
+  #end
     <option value="copySelected">$l10n.CopySelected</option>
 #end
 #if ($user.hasPermission($scarabG.Permission.ISSUE__MOVE, $module))
+  #if ($listSize <= $scarabG.Constant.ISSUE_MAX_MOVE)
     <option value="moveAll">$l10n.MoveAll</option>
+  #end
     <option value="moveSelected">$l10n.MoveSelected</option>
 #end
 </select>
