forward port from SCAST_T1_1
Issue number: 21780 - Too many report criteria can lead to a resource
 starvation due to mysql limitations.
 Modified files:
 * src/conf/Scarab.properties - added scarab.report.max.criteria property
   set to a safe value of 5.
 * src/i18n/ScarabBundle_en_US.properties - Added keys for new messages
   regarding the limit: ReportIsTooExpensive,
   ThisAxisMustBeDatesUnlessHeadingsAreRemoved, AvailableNumberHeadings,
   NoMoreHeadings
 * src/java/org/tigris/scarab/actions/ConfigureReport.java -
   doSettype: don't allow switching from a date axis, if the other axis
   already has the maximum headings.
   doGeneratereport: give alert message, if the query was too expensive. This
   is to cover old saved reports that were too complex.
 * src/java/org/tigris/scarab/reports/ReportDefinition.java
   added methods:
   maximumHeadings()
   allowMoreHeadings(ReportAxis axis)
   reportQueryIsExpensive()
   totalAvailableNumberOfHeadings()
   availableNumberOfHeadings(ReportAxis axis)
   totalNumberOfNonDateHeadings()
   numberOfNonDateHeadings(ReportAxis axis)
   to help with calculation and notification of report limits.
 * src/java/org/tigris/scarab/screens/ReportExport.java - doBuildTemplate:
   abort report generation with a message if the definition is too complex.
 * src/java/org/tigris/scarab/util/ScarabConstants.java - added
   REPORT_MAX_CRITERIA constant which can be modified via Scarab.properties
 * src/templates/screens/reports/AxisConfiguration.vm - use methods in
   ReportDefinition to notify user of limits to headings and to hide
   the 'Add headings' button when the limit is reached.
 * src/templates/screens/reports/Report_1.vm - do not allow generation of the
   report if it exceeds limits and give a message to that effect. This is
   for the benefit of previously saved reports and possibly any url hacking.

--- a/src/templates/screens/reports/AxisConfiguration.vm
+++ b/src/templates/screens/reports/AxisConfiguration.vm
@@ -45,7 +45,8 @@
 #set($booldummy = $parameters.add($param))
 
 #set ($headingIndex = $data.Parameters.getInt("heading", -1))
-#set ($headings = $reportDefn.getAxis($axisIndex).ReportHeadings)
+#set ($reportAxis = $reportDefn.getAxis($axisIndex))
+#set ($headings = $reportAxis.ReportHeadings)
 #set ($singleHeading = $headings && $headings.size() == 1)
 #set ($multiHeading = $headings && $headings.size() > 1)
 
@@ -59,11 +60,19 @@
     #set ($headingIndex = 0)
   #end
   <h3>$l10n.get("${rowCol}Headings")</h3>
-  #if ($multiHeading)
   <div class="colbar">
+  #if ($multiHeading)
     $l10n.format('DefineHeaderSelectionOptionsAndHeadingSummaryInstructions', $l10n.EditSelectedHeading, $l10n.format('SelectOptionsHeader', $axisIndex), $l10n.HeadingSummary.toLowerCase())
-  </div>
   #end
+  #if ($isNotDateAxis)
+    #if ($reportDefn.allowMoreHeadings($reportAxis))
+      $l10n.format('AvailableNumberHeadings', $reportDefn.availableNumberOfHeadings($reportAxis))
+    #else  
+      $l10n.NoMoreHeadings
+    #end
+  #end
+  </div>
+
   <div>
     <table width="100%" cellpadding="3" cellspacing="2" border="1">		
       <tr>
@@ -110,8 +119,10 @@
         value="$l10n.EditSelectedHeading" />
     <input type="submit" name="eventSubmit_doRemoveHeading" 
         value="$l10n.RemoveSelectedHeading" />
+   #if ( $reportDefn.allowMoreHeadings($reportAxis))
     <input type="submit" name="eventSubmit_doAddHeading" 
         value="$l10n.AddNewHeading" />
+   #end
   </div>
 #elseif ($singleHeading)
     #set ($headingIndex = 0)
@@ -119,7 +130,7 @@
     #set($booldummy = $parameters.add($param))
     <input type="hidden" name="heading" value="0" />
     #set ($selectedHeading = $headings.get(0))
-  #if ($isNotDateAxis && $selectedHeading.size() > 0)
+  #if ($isNotDateAxis && $selectedHeading.size() > 0 && $reportDefn.allowMoreHeadings($reportAxis))
   <div class="functnbar3">
     <input type="submit" name="eventSubmit_doAddHeading" 
         value="$l10n.AddNewHeading" />
@@ -134,6 +145,7 @@
     <tr>
       <th width="120">$l10n.SelectContentType</th>
       <td>
+
 #if ($selectedHeading && $selectedHeading.size() > 0)
   #set ($selectedType = $selectedHeading.calculateType())
 #end
