* Search.vm: use "optionIds" instead of "optionId" as intake field to allow for searching on multiple values for an option attribute. Issue number:  21022 Submitted by:  elicia

--- a/src/templates/screens/Search.vm
+++ b/src/templates/screens/Search.vm
@@ -82,7 +82,7 @@ $user.setHomePage("query")
   #if ($attVal.Attribute.AttributeType.ValidationKey)
     #set ($field = $attVal.Attribute.AttributeType.ValidationKey)
   #elseif ($attVal.Attribute.AttributeType.Name == $scarabG.Constant.DROPDOWN_LIST)
-    #set ($field = "OptionId")
+    #set ($field = "OptionIds")
   #end
   <tr>
    <th width="120">$attVal.RModuleAttribute.DisplayValue</th>
