Change log: *src/templates/screens/reports/AxisConfiguration.vm: #form method changed from "get" to "post" to not have any restriction on the no of attributes for a row/column criteria. The problem was found when trying to define row/column criteria for more than 80 attributes in a report. IE restricts the URL length to a maximum of 2083 characters.
Using "post", any way, is more appropriate here.

Submitted by: venkat@collab.net
Issue: PCN21937

--- a/src/templates/screens/reports/AxisConfiguration.vm
+++ b/src/templates/screens/reports/AxisConfiguration.vm
@@ -37,7 +37,7 @@
 <div class="colbar"><a href="$link.setPage("reports,AxisConfiguration.vm").setPathInfo("axis", "$axisIndex").addPathInfo("action", "ConfigureReport").addPathInfo("eventSubmit_doSwapRowCol", "foo")">$l10n.SwapRowCol</a></div>
 #end
 
-<form method="get" action="$link.setPage("reports,AxisConfiguration.vm")">
+<form method="post" action="$link.setPage("reports,AxisConfiguration.vm")">
 <input type="hidden" name="action" value="ConfigureReport"/>
 <input type="hidden" name="axis" value="$axisIndex"/>
 #set ($parameters = [])
