forward port from SCAST_T1_1 Issue number: 22077 - using back button while configuring report can generate stacktrace/errors. Modified file: * src/templates/screens/reports/AxisConfiguration.vm - add hidden form inputs to   disallow use of browser back button when configuring the report axes.

--- a/src/templates/screens/reports/AxisConfiguration.vm
+++ b/src/templates/screens/reports/AxisConfiguration.vm
@@ -40,6 +40,10 @@
 <form method="post" action="$link.setPage("reports,AxisConfiguration.vm")">
 <input type="hidden" name="action" value="ConfigureReport"/>
 <input type="hidden" name="axis" value="$axisIndex"/>
+<input type="hidden" name="_session_access_counter" 
+    value="$data.User.getTemp("_session_access_counter")" />
+## needed for the back button avoidance code
+<input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="reports,Info.vm" />
 #set ($parameters = [])
 #set ($param = ["axis", "$axisIndex"])
 #set($booldummy = $parameters.add($param))
