--- a/doc/struts.css
+++ b/doc/struts.css
@@ -6,7 +6,9 @@ body {
 	background: #FFFFFF;
 	color: #000000;
 }
-
+img {
+	border: none;
+}
 q {
 	font-family: Arial, Helvetica, sans-serif;
 }
@@ -81,7 +83,7 @@ q {
 	background: #023264;
 	color: #FFFFFF;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 1.5em;
+	font-size: 1.1em;
 }
 
 .menu-title {
